<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlueBackground"
    tools:context=".ReviewActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/content_review"
        android:layout_width="411dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="365dp"
        android:layout_height="394dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintVertical_bias="0.309">

        <LinearLayout
            android:id="@+id/ReviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="181dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_rectangle" />

    <Button
        android:id="@+id/button"
        android:layout_width="68dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_rectangle_button"
        android:fontFamily="@font/poppins"
        android:text="@string/locals"
        android:textAllCaps="false"
        android:textColor="#E0DBDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_rectangle_button"
        android:fontFamily="@font/poppins"
        android:text="@string/visitors"
        android:textAllCaps="false"
        android:textColor="#E0DBDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Neighborhood_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Berkeley"
        android:textColor="@color/colorLightGrey"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/Overall_Safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/overall_safety"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/day_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/day_safety"
        android:textColor="@color/colorLightGrey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/night_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/night_safety"
        android:textColor="@color/colorLightGrey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/accessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/accessibility"
        android:textColor="@color/colorLightGrey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/crime_Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/crime_rate"
        android:textColor="@color/colorLightGrey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.697" />

    <TextView
        android:id="@+id/cleanliness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/cleanliness"
        android:textColor="@color/colorLightGrey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/rounded_button"
        android:text="@string/plus_sign"
        android:textColor="@color/colorLightGrey"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toEndOf="@+id/Neighborhood_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/big_three_stars" />

    <ImageView
        android:id="@+id/smallstar"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toEndOf="@+id/Overall_Safety"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.098"
        app:srcCompat="@drawable/green_star" />

    <ImageView
        android:id="@+id/smallstar8"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/smallstar"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.099"
        app:srcCompat="@drawable/green_star" />

    <ImageView
        android:id="@+id/smallstar5"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/smallstar2"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.099"
        app:srcCompat="@drawable/green_star" />

    <ImageView
        android:id="@+id/smallstar6"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/smallstar5"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.099"
        app:srcCompat="@drawable/green_star" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <ImageView
            android:id="@+id/ministar1"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />

        <ImageView
            android:id="@+id/ministar2"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />

        <ImageView
            android:id="@+id/ministar3"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />

        <ImageView
            android:id="@+id/ministar4"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <ImageView
            android:id="@+id/ministar5"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />

        <ImageView
            android:id="@+id/ministar6"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />

        <ImageView
            android:id="@+id/ministar7"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />

        <ImageView
            android:id="@+id/ministar8"
            android:layout_width="18dp"
            android:layout_height="9dp"
            app:srcCompat="@drawable/green_star" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <ImageView
            android:id="@+id/smallstar7"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />

        <ImageView
            android:id="@+id/smallstar8"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />

        <ImageView
            android:id="@+id/smallstar9"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/smallstar11"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />

        <ImageView
            android:id="@+id/smallstar10"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92">

        <ImageView
            android:id="@+id/smallstar14"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />

        <ImageView
            android:id="@+id/smallstar13"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />

        <ImageView
            android:id="@+id/smallstar12"
            android:layout_width="20dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/yellow_star" />
    </LinearLayout>

    <TextView
        android:id="@+id/close2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/x"
        android:textColor="@color/colorLightGrey"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />


</androidx.constraintlayout.widget.ConstraintLayout>